tests/valid/noNull.ts
// @ts-nocheck
const value = undefined;
