tests/invalid/noNull.ts
// @ts-nocheck
const value = null;
